[package]
name = "cargo-geng"
version = "0.9.0"
authors = ["kuviman <kuviman@gmail.com>"]
description = "Game Engine (cargo helper)"
license = "MIT"
homepage = "https://github.com/kuviman/geng"
edition = "2021"

[dependencies]
open = "1"
tokio = { version = "1", features = ["rt-multi-thread", "full"] }
futures = "0.3"
hyper = { version = "0.14", features = ["server", "http1", "tcp"] }
hyper-staticfile = "0.6"
fs_extra = "1"
cargo_metadata = "0.13"
clap = { version = "3.0.0-rc.5", features = ["derive"] }
anyhow = "1"
