[package]
name = "cargo-geng"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[dependencies]
open.workspace = true
tokio.workspace = true
futures.workspace = true
hyper.workspace = true
hyper-staticfile.workspace = true
fs_extra.workspace = true
cargo_metadata.workspace = true
clap.workspace = true
anyhow.workspace = true
wasm-bindgen-cli-support.workspace = true
wasm-opt.workspace = true
serde.workspace = true
serde_json.workspace = true
