[package]
name = "geng-asset"
authors.workspace = true
categories.workspace = true
description.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

[features]
default = ["audio"]
audio = ["dep:geng-audio"]

[dependencies]
geng-asset-derive.workspace = true
anyhow.workspace = true
serde_json.workspace = true
futures.workspace = true
batbox-file.workspace = true
ugli.workspace = true
geng-font.workspace = true
geng-shader.workspace = true
geng-audio = { workspace = true, optional = true }
notify.workspace = true                            # TODO optional?
log.workspace = true

[target.'cfg(not(target_arch="wasm32"))'.dependencies]
image.workspace = true

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen.workspace = true
web-sys = { workspace = true }
